[package]
name = "dr_disk"
version = "0.1.0"
edition = "2021"
description = "An interactive Rust CLI tool for disk usage analysis."
license = "MIT"
repository = "https://github.com/akhilburle/dr_disk.git"
keywords = ["disk-usage", "cli", "utility", "rust", "file-management"]
categories = ["command-line-utilities", "filesystem"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["std"] }
clap = { version = "4.5.42", features = ["derive"] }
colored = "3.0.0"
filesize = "0.2.0"
human_format = "1.1.0"
indicatif = "0.18.0"
rustyline = "17.0.0"
sysinfo = "0.36.1"
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
